# LearningCpp

./: .gitignore  README.md  binary_search_tree.cpp  binary_tree.cpp  dynamic_array  dynamic_array.cpp  dynamic_class.cpp  error_handling_assert  error_handling_assert.cpp  hashtable.cpp  linked_list.cpp  main_argsc_and_argsv.cpp  pointer_array.cpp  pointer_heap.cpp  pointer_raw_heap.cpp  pointer_raw_stack.cpp  pointer_stack.cpp  recursion_functions.cpp  smartpointer_wait_ptr.cpp  smartpointers_shared_ptr.cpp  smartpointers_uniq_ptr.cpp
OOP/: .gitignore  Makefile  README.md  build.sh
OOP/lib/: builder.h  developer.h  director.h  employee.h  factory.h  teacher.h
OOP/src/: builder.cpp  developer.cpp  developer.h  director.cpp  employee.cpp  employee.h  factory.cpp  main.cpp  teacher.cpp  teacher.h
cmake_examples/example_01/tests/: CMakeLists.txt
gtest/: test.cpp
gtest/example_01/: Makefile  multiply_test.cpp
gtest/example_01_Makefile_multiply/: multiply.cpp  multiply.h
gtest/example_01_multiply/: Makefile
gtest/example_02_CMakeList_multiply/: CMakeLists.txt
makefile_examples/: Makefile_Sharpmake_generated  README.md
makefile_examples/example_01/: Makefile  blah
makefile_examples/example_02_create_file_compile_hello_world_order/: Makefile
makefile_examples/example_04_variables_dependency_and_clean/: Makefile
makefile_examples/example_05_multiple_files/: Makefile  Makefile_all targets
makefile_examples/example_06_wildcards_variables_automatic/: Makefile_wildcard_print
makefile_examples/example_09_static_pattern_wildcards_multiple_files/: Makefile  (+1 more)
(+56 files in other folders)
